# startup-back

./: .container.env  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.container.ini  alembic.ini  docker-compose.yaml  main.py  pyproject.toml
banco/: __init__.py
banco/alembic/: env.py
banco/alembic/versions/: 1fcd87e18a5e_tornando_categoria_opcional.py  35573f1b667c_pre_criando_categorias.py  94ea952c52cf_primeira_versao.py  a22ad1911315_adicionando_mais_indices.py  a772483863b2_adicionando_usuario_a_categoria.py  b67bba96423f_criando_campo_nome_em_historico.py  f8261c963e0f_refat_geral.py
banco/tabelas/: __init__.py
contextos/categoria/: tabela.py
contextos/categoria/repositorios/: escrita.py  leitura.py
contextos/categoria/rotas/: __init__.py  modelos.py
contextos/historico/: tabela.py
contextos/historico/executores/: tarefas.py
contextos/historico/repositorios/: escrita.py  leitura.py
contextos/historico/rotas/: __init__.py  lancamento_recorrente.py  modelos.py
contextos/usuario/: tabela.py
contextos/usuario/repositorios/: escrita.py  leitura.py
contextos/usuario/rotas/: __init__.py  erros.py  modelos.py
dockerfiles/: back.dockerfile
servidor/: celery.py  config.py
servidor/celery_config/: __init__.py  tasks.py
tests/: conftest.py
tests/contextos/categoria/: mocks.py  test_ponta_a_ponta.py
tests/contextos/historico/: mocks.py  test_ponta_a_ponta.py
tests/contextos/historico/historico/: test_ponta_a_ponta.py
tests/contextos/historico/lancamento_recorrente/: test_ponta_a_ponta.py
tests/contextos/usuario/: mocks.py  test_ponta_a_ponta.py
utilitarios/: ambiente.py  repositorios.py  rotas.py  senhas.py
