[tool.poetry]
name = "startup-back"
version = "0.1.0"
description = ""
authors = ["Matheus Mendes <mattheus2015@yahoo.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
gunicorn = "^22.0.0"
SQLAlchemy = {extras = ["asyncio"], version = "^2.0.29"}
asyncpg = "^0.29.0"
bcrypt = "^4.1.3"
pydantic-settings = "^2.2.1"
alembic = "^1.13.1"
celery = {extras = ["redis"], version = "^5.4.0"}
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
mypy = "^1.10.0"
bandit = "^1.7.8"
isort = "^5.13.2"
ruff = "^0.4.3"
pre-commit = "^3.7.0"
pytest = "^8.2.0"
pytest-xdist = "^3.6.1"
pytest-asyncio = "v0.21.2"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
